--- a/ETL - Challenge.ipynb
+++ b/ETL - Challenge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        "4              AL       Akron town                 68.6"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {
     "scrolled": true
    },
@@ -229,7 +229,7 @@
        "4                    False        False  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -303,31 +303,31 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>AL</td>\n",
-       "      <td>Abanda CDP</td>\n",
+       "      <td>Abanda</td>\n",
        "      <td>21.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>AL</td>\n",
-       "      <td>Abbeville city</td>\n",
+       "      <td>Abbeville</td>\n",
        "      <td>69.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>AL</td>\n",
-       "      <td>Adamsville city</td>\n",
+       "      <td>Adamsville</td>\n",
        "      <td>78.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>AL</td>\n",
-       "      <td>Addison town</td>\n",
+       "      <td>Addison</td>\n",
        "      <td>81.4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>AL</td>\n",
-       "      <td>Akron town</td>\n",
+       "      <td>Akron</td>\n",
        "      <td>68.6</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -335,15 +335,15 @@
        "</div>"
       ],
       "text/plain": [
-       "  state             city percent_completed_hs\n",
-       "0    AL       Abanda CDP                 21.2\n",
-       "1    AL   Abbeville city                 69.1\n",
-       "2    AL  Adamsville city                 78.9\n",
-       "3    AL     Addison town                 81.4\n",
-       "4    AL       Akron town                 68.6"
+       "  state        city percent_completed_hs\n",
+       "0    AL      Abanda                 21.2\n",
+       "1    AL   Abbeville                 69.1\n",
+       "2    AL  Adamsville                 78.9\n",
+       "3    AL     Addison                 81.4\n",
+       "4    AL       Akron                 68.6"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,27 +363,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hs_matched.replace(to_replace='-', value=0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hs_matched.replace(to_replace=[\" city\",\" town\", \" CDP\"], value=[\"\",\"\",\"\"], inplace=True, regex= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pov_matched.replace(to_replace=[\" city\",\" town\", \" CDP\"], value=[\"\",\"\",\"\"], inplace=True, regex= True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Postresql engine\n",
-    "rds_connection_string = \"postgres:karen135@localhost:5432/PoliceKillings\"\n",
+    "rds_connection_string = \"postgres:marella0823@localhost:5432/PoliceKillings\"\n",
     "engine = create_engine(f'postgresql://{rds_connection_string}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['poverty_rate', 'hs_rate']"
+       "['poverty_rate', 'hs_rate', 'killings']"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,11 +421,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
     "pov_matched.to_sql(name='poverty_rate', con=engine, if_exists='append', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hs_matched.to_sql(name='hs_rate', con=engine, if_exists='append', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_police.to_sql(name='killings', con=engine, if_exists='append', index=False)"
    ]
   },
   {
